# esp32-fido2

./: .gitignore  CLAUDE.md  CMakeLists.txt  HISTORY.md  README.md  partitions.csv  sdkconfig.defaults  sdkconfig.defaults.fido2
components/eddsa/: CMakeLists.txt  eddsa_compat.h  eddsa_ecp_extras.c  fe25519.c  fe25519.h
components/fido/: CMakeLists.txt  cbor.c  cbor_client_pin.c  cbor_config.c  cbor_get_assertion.c  cbor_large_blobs.c  cbor_make_credential.c  cbor_reset.c  cbor_vendor.c  credential.c  debug_mode.h  fido.c  fido.h  fido_ef.c  files.h  otp.c
components/mbedtls_eddsa/: CMakeLists.txt  eddsa.c  eddsa_compat.h  eddsa_shim.c
components/mbedtls_eddsa/include/mbedtls/: eddsa.h
components/openpgp/: CMakeLists.txt  cmd_activate_file.c  cmd_change_pin.c  cmd_import_data.c  cmd_internal_aut.c  cmd_keypair_gen.c  cmd_mse.c  cmd_pso.c  cmd_put_data.c  cmd_reset_retry.c  cmd_select_data.c  cmd_verify.c  do.c  do.h  files.c  files.h  openpgp.c  piv.c  version.h
components/picokeys/: CMakeLists.txt
components/picokeys/src/: apdu.c  button.c  crypto_utils.c  eac.c  main.c  picokeys.h  serial.c  tlv.c  tlv.h
components/picokeys/src/fs/: file.c  flash.c  low_flash.c
components/picokeys/src/led/: led.c  led_neopixel.c
components/picokeys/src/rng/: hwrng.c  random.c
components/picokeys/src/usb/: usb.c  usb.h  usb_descriptors.c
components/picokeys/src/usb/ccid/: ccid.c
components/picokeys/src/usb/hid/: ctap_hid.h  hid.c
components/tinycbor/: CMakeLists.txt
main/: CMakeLists.txt  Kconfig.projbuild  device_config.h  device_config.old.h  idf_component.yml  main.c
